--- a/DeathsDoor/Assembly-CSharp.csproj
+++ b/DeathsDoor/Assembly-CSharp.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Assets\Scripts\Camera.cs" />
     <Compile Include="Assets\Scripts\CandyManager.cs" />
     <Compile Include="Assets\Scripts\CharacterMover.cs" />
+    <Compile Include="Assets\Scripts\CList.cs" />
+    <Compile Include="Assets\Scripts\Collectable.cs" />
+    <Compile Include="Assets\Scripts\Collection.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
     <Compile Include="Assets\Scripts\FloatData.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
