--- a/DeathsDoor/Assembly-CSharp.csproj
+++ b/DeathsDoor/Assembly-CSharp.csproj
@@ -61,12 +61,15 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CandyCollect.cs" />
     <Compile Include="Assets\Scripts\CandyManager.cs" />
+    <Compile Include="Assets\Scripts\ChangeScene.cs" />
     <Compile Include="Assets\Scripts\CharacterMover.cs" />
     <Compile Include="Assets\Scripts\ClickDoor.cs" />
     <Compile Include="Assets\Scripts\CList.cs" />
     <Compile Include="Assets\Scripts\Collectable.cs" />
+    <Compile Include="Assets\Scripts\DeathsDoorGate.cs" />
     <Compile Include="Assets\Scripts\Destory Pannel.cs" />
     <Compile Include="Assets\Scripts\Dialouge.cs" />
+    <Compile Include="Assets\Scripts\End.cs" />
     <Compile Include="Assets\Scripts\EnemyAi.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
     <Compile Include="Assets\Scripts\FloatData.cs" />
@@ -85,21 +88,26 @@
     <Compile Include="Assets\Scripts\KeyGate.cs" />
     <Compile Include="Assets\Scripts\Lanterns.cs" />
     <Compile Include="Assets\Scripts\LoadScene\ChurchtoOutside.cs" />
+    <Compile Include="Assets\Scripts\LoadScene\MaintoDeath.cs" />
     <Compile Include="Assets\Scripts\LoadScene\MaintoOutsideChurch.cs" />
     <Compile Include="Assets\Scripts\LoadScene\MaintoRail.cs" />
     <Compile Include="Assets\Scripts\LoadScene\Maintotutotutorial.cs" />
     <Compile Include="Assets\Scripts\LoadScene\OUTSIDETOMAIN.cs" />
     <Compile Include="Assets\Scripts\LoadScene\OuttoIn.cs" />
     <Compile Include="Assets\Scripts\LoadScene\TutotialtoMain.cs" />
+    <Compile Include="Assets\Scripts\Main2.cs" />
     <Compile Include="Assets\Scripts\Menu.cs" />
+    <Compile Include="Assets\Scripts\orextl.cs" />
     <Compile Include="Assets\Scripts\PlayerManager.cs" />
     <Compile Include="Assets\Scripts\RailtoMai.cs" />
     <Compile Include="Assets\Scripts\ReturnHome.cs" />
+    <Compile Include="Assets\Scripts\SceneController.cs" />
     <Compile Include="Assets\Scripts\ScoreSystem.cs" />
     <Compile Include="Assets\Scripts\StealCandy.cs" />
     <Compile Include="Assets\Scripts\StingListData.cs" />
     <Compile Include="Assets\Scripts\TextBehaviour.cs" />
     <Compile Include="Assets\Scripts\ToTText.cs" />
+    <Compile Include="Assets\Scripts\TreatKey.cs" />
     <Compile Include="Assets\Scripts\TreatTrigger.cs" />
     <Compile Include="Assets\Scripts\TriggerEventBehavior.cs" />
     <Compile Include="Assets\Scripts\UpdateVlue.cs" />
